--- a/multi.html
+++ b/multi.html
@@ -7,23 +7,45 @@
   <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
   <style>
-    body{margin:0;overflow:hidden;background:#000;font-family:system-ui,-apple-system,Segoe UI,Roboto,sans-serif}
-    .hint{position:fixed;left:0;right:0;bottom:0;background:rgba(0,0,0,.6);color:#fff;padding:10px 14px;text-align:center;font-size:14px}
-    .hint code{background:rgba(255,255,255,.1);padding:2px 4px;border-radius:4px}
+    body {
+      margin:0;
+      overflow:hidden;
+      background:#000;
+      font-family:system-ui,-apple-system,Segoe UI,Roboto,sans-serif;
+    }
+    .hint {
+      position:fixed;
+      left:0;
+      right:0;
+      bottom:0;
+      background:rgba(0,0,0,.6);
+      color:#fff;
+      padding:10px 14px;
+      text-align:center;
+      font-size:14px
+    }
+    .hint code {
+      background:rgba(255,255,255,.1);
+      padding:2px 4px;
+      border-radius:4px
+    }
   </style>
 </head>
 <body>
-  <a-scene mindar-image="imageTargetSrc: ./targets.mind" embedded color-space="sRGB"
+  <a-scene mindar-image="imageTargetSrc: ./targets.mind"
+           color-space="sRGB"
            renderer="colorManagement: true, physicallyCorrectLights"
-           vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
-   <a-assets>
-  <video id="clip1" src="./videos/clip1.mp4" autoplay loop muted playsinline webkit-playsinline></video>
-  <video id="clip2" src="./videos/clip2.mp4" autoplay loop muted playsinline webkit-playsinline></video>
-  <video id="clip3" src="./videos/clip3.mp4" autoplay loop muted playsinline webkit-playsinline></video>
-  <video id="clip4" src="./videos/clip4.mp4" autoplay loop muted playsinline webkit-playsinline></video>
-  <video id="clip5" src="./videos/clip5.mp4" autoplay loop muted playsinline webkit-playsinline></video>
-  <video id="clip6" src="./videos/clip6.mp4" autoplay loop muted playsinline webkit-playsinline></video>
-</a-assets>
+           vr-mode-ui="enabled: false"
+           device-orientation-permission-ui="enabled: false">
+           
+    <a-assets>
+      <video id="clip1" src="./videos/clip1.mp4" autoplay loop muted playsinline webkit-playsinline></video>
+      <video id="clip2" src="./videos/clip2.mp4" autoplay loop muted playsinline webkit-playsinline></video>
+      <video id="clip3" src="./videos/clip3.mp4" autoplay loop muted playsinline webkit-playsinline></video>
+      <video id="clip4" src="./videos/clip4.mp4" autoplay loop muted playsinline webkit-playsinline></video>
+      <video id="clip5" src="./videos/clip5.mp4" autoplay loop muted playsinline webkit-playsinline></video>
+      <video id="clip6" src="./videos/clip6.mp4" autoplay loop muted playsinline webkit-playsinline></video>
+    </a-assets>
 
     <a-camera position="0 0 0" look-controls="false"></a-camera>
 
@@ -58,27 +80,27 @@
   </div>
 
   <script>
-  const map = [
-    {entityId:'t0', videoId:'clip1'},
-    {entityId:'t1', videoId:'clip2'},
-    {entityId:'t2', videoId:'clip3'},
-    {entityId:'t3', videoId:'clip4'},
-    {entityId:'t4', videoId:'clip5'},
-    {entityId:'t5', videoId:'clip6'}
-  ];
+    const map = [
+      {entityId:'t0', videoId:'clip1'},
+      {entityId:'t1', videoId:'clip2'},
+      {entityId:'t2', videoId:'clip3'},
+      {entityId:'t3', videoId:'clip4'},
+      {entityId:'t4', videoId:'clip5'},
+      {entityId:'t5', videoId:'clip6'}
+    ];
 
-  map.forEach(({entityId, videoId})=>{
-    const ent = document.getElementById(entityId);
-    const vid = document.getElementById(videoId);
-    ent.addEventListener('targetFound', ()=> vid.play().catch(()=>{}));
-    ent.addEventListener('targetLost', ()=> vid.pause());
-  });
+    map.forEach(({entityId, videoId})=>{
+      const ent = document.getElementById(entityId);
+      const vid = document.getElementById(videoId);
+      ent.addEventListener('targetFound', ()=> vid.play().catch(()=>{}));
+      ent.addEventListener('targetLost', ()=> vid.pause());
+    });
 
-  // 🔹 Фикс для iPhone/Safari
-  document.body.addEventListener('click', ()=> {
-    const vids = document.querySelectorAll("video");
-    vids.forEach(v => v.play().catch(()=>{}));
-  });
-</script>
+    // 🔹 Фикс для iPhone/Safari
+    document.body.addEventListener('click', ()=> {
+      const vids = document.querySelectorAll("video");
+      vids.forEach(v => v.play().catch(()=>{}));
+    });
+  </script>
 </body>
 </html>
