--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>AR Poster (6 targets, Reels format + sound)</title>
+  <title>AR Poster (6 targets, Reels + sound + camera preview)</title>
   <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
   <style>
@@ -16,16 +16,22 @@
       background:#000;
       font-family:system-ui,-apple-system,Segoe UI,Roboto,sans-serif;
     }
+    #camera-feed {
+      position:fixed;
+      top:0; left:0;
+      width:100%; height:100%;
+      object-fit:cover;
+      z-index:-1; /* фон */
+    }
     .hint {
       position:fixed;
-      left:0;
-      right:0;
-      bottom:0;
+      left:0; right:0; bottom:0;
       background:rgba(0,0,0,.6);
       color:#fff;
       padding:10px 14px;
       text-align:center;
       font-size:14px;
+      z-index:10;
     }
     .hint code {
       background:rgba(255,255,255,.1);
@@ -35,11 +41,16 @@
   </style>
 </head>
 <body>
+  <!-- Фоновое превью с камеры -->
+  <video id="camera-feed" autoplay playsinline muted></video>
+
+  <!-- MindAR сцена -->
   <a-scene mindar-image="imageTargetSrc: ./targets.mind"
            color-space="sRGB"
            renderer="colorManagement: true, physicallyCorrectLights"
            vr-mode-ui="enabled: false"
            device-orientation-permission-ui="enabled: false">
+
     <a-assets>
       <video id="clip1" src="./videos/clip1.mp4" playsinline webkit-playsinline></video>
       <video id="clip2" src="./videos/clip2.mp4" playsinline webkit-playsinline></video>
@@ -54,23 +65,18 @@
     <a-entity id="t0" mindar-image-target="targetIndex: 0">
       <a-video src="#clip1" width="0.5625" height="1" position="0 0 0"></a-video>
     </a-entity>
-
     <a-entity id="t1" mindar-image-target="targetIndex: 1">
       <a-video src="#clip2" width="0.5625" height="1" position="0 0 0"></a-video>
     </a-entity>
-
     <a-entity id="t2" mindar-image-target="targetIndex: 2">
       <a-video src="#clip3" width="0.5625" height="1" position="0 0 0"></a-video>
     </a-entity>
-
     <a-entity id="t3" mindar-image-target="targetIndex: 3">
       <a-video src="#clip4" width="0.5625" height="1" position="0 0 0"></a-video>
     </a-entity>
-
     <a-entity id="t4" mindar-image-target="targetIndex: 4">
       <a-video src="#clip5" width="0.5625" height="1" position="0 0 0"></a-video>
     </a-entity>
-
     <a-entity id="t5" mindar-image-target="targetIndex: 5">
       <a-video src="#clip6" width="0.5625" height="1" position="0 0 0"></a-video>
     </a-entity>
@@ -82,6 +88,7 @@
   </div>
 
   <script>
+    // Привязка роликов к таргетам
     const map = [
       {entityId:'t0', videoId:'clip1'},
       {entityId:'t1', videoId:'clip2'},
@@ -106,6 +113,17 @@
         v.play().catch(()=>{});
       });
     }, {once:true});
+
+    // Фоновое превью камеры
+    if (navigator.mediaDevices && navigator.mediaDevices.getUserMedia) {
+      navigator.mediaDevices.getUserMedia({ video: { facingMode: "environment" } })
+        .then(stream => {
+          document.getElementById("camera-feed").srcObject = stream;
+        })
+        .catch(err => {
+          console.error("Ошибка доступа к камере:", err);
+        });
+    }
   </script>
 </body>
 </html>
