--- a/multi.html
+++ b/multi.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>AR Promo Reels</title>
+  <title>AR Promo Reels (4 видео)</title>
   <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
   <style>
@@ -56,8 +56,6 @@
     <a-entity id="t1" mindar-image-target="targetIndex: 1"></a-entity>
     <a-entity id="t2" mindar-image-target="targetIndex: 2"></a-entity>
     <a-entity id="t3" mindar-image-target="targetIndex: 3"></a-entity>
-    <a-entity id="t4" mindar-image-target="targetIndex: 4"></a-entity>
-    <a-entity id="t5" mindar-image-target="targetIndex: 5"></a-entity>
   </a-scene>
 
   <!-- Reels-видео поверх -->
@@ -65,8 +63,6 @@
   <video id="reel2" class="reels" src="./videos/clip2.mp4" playsinline webkit-playsinline></video>
   <video id="reel3" class="reels" src="./videos/clip3.mp4" playsinline webkit-playsinline></video>
   <video id="reel4" class="reels" src="./videos/clip4.mp4" playsinline webkit-playsinline></video>
-  <video id="reel5" class="reels" src="./videos/clip5.mp4" playsinline webkit-playsinline></video>
-  <video id="reel6" class="reels" src="./videos/clip6.mp4" playsinline webkit-playsinline></video>
 
   <div class="hint">
     Наведи камеру на постер → он оживёт 🚀<br>
@@ -88,9 +84,7 @@
       {entityId:'t0', reelId:'reel1'},
       {entityId:'t1', reelId:'reel2'},
       {entityId:'t2', reelId:'reel3'},
-      {entityId:'t3', reelId:'reel4'},
-      {entityId:'t4', reelId:'reel5'},
-      {entityId:'t5', reelId:'reel6'}
+      {entityId:'t3', reelId:'reel4'}
     ];
 
     map.forEach(({entityId, reelId})=>{
